<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_desc">My Nanodegree Apps!</string>
    <string name="app_popular_movies">POPULAR MOVIES</string>
    <string name="app_stock_hawk">STOCK HAWK</string>
    <string name="app_build_it_bigger">BUILD IT BIGGER</string>
    <string name="app_make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="app_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="app_capstone">CAPSTONE</string>
    <string name="app_popular_movies_name">Popular Movies</string>
    <string name="app_stock_hawk_name">Stock Hawk</string>
    <string name="app_build_it_bigger_name">Build it Bigger</string>
    <string name="app_make_your_app_material_name">Make your app Material</string>
    <string name="app_go_ubiquitous_name">Go Ubiquitous</string>
    <string name="app_capstone_name">capstone</string>
    <string name="toast_btn_click_text">This button will launch my placeholder app!</string>
    <string name="toast_btn_click_text_placeholder">placeholder</string>
</resources>
