<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aisaka.tiger.myappportfolio.MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:text="@string/app_desc"
        android:textSize="20dp" />
    <Button
        android:id="@+id/btn_app_popular_movies"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:text="@string/app_popular_movies"
        android:layout_below="@+id/app_title"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#2E3D49"
        android:layout_marginTop="10dp"
        android:onClick="launchApp" />
    <Button
        android:id="@+id/btn_app_stock_hawk"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:text="@string/app_stock_hawk"
        android:layout_below="@+id/btn_app_popular_movies"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#2E3D49"
        android:layout_marginTop="10dp"
        android:onClick="launchApp" />
    <Button
        android:id="@+id/btn_app_build_it_bigger"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:text="@string/app_build_it_bigger"
        android:layout_below="@+id/btn_app_stock_hawk"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#2E3D49"
        android:layout_marginTop="10dp"
        android:onClick="launchApp" />
    <Button
        android:id="@+id/btn_app_make_your_material"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:text="@string/app_make_your_app_material"
        android:layout_below="@+id/btn_app_build_it_bigger"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#2E3D49"
        android:layout_marginTop="10dp"
        android:onClick="launchApp" />
    <Button
        android:id="@+id/btn_app_go_ubiquitous"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:text="@string/app_go_ubiquitous"
        android:layout_below="@+id/btn_app_make_your_material"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#2E3D49"
        android:layout_marginTop="10dp"
        android:onClick="launchApp" />
    <Button
        android:id="@+id/btn_app_capstone"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:text="@string/app_capstone"
        android:layout_below="@+id/btn_app_go_ubiquitous"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#2E3D49"
        android:layout_marginTop="10dp"
        android:onClick="launchApp" />

</RelativeLayout>